<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Base Datos</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="snom">Nombre:</string>
    <string name="sid">ID:</string>
    <string name="ins">Alta</string>
    <string name="cambios">Cambios</string>
    <string name="baja">Baja</string>
    <string name="cons">Lista</string>
    <string name="change_id">Ingresa un id equivalente a un usuario</string>
    <string name="change_btn">Cambiar nombre</string>
    <string name="change_tv_name">Ingresa el nuevo nombre:</string>
</resources>
