<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/xll1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Para ingresar un nuevo usuario, ingresar los datos correspondientes
        \nPara cambiar un usuario, ingresar un id a un usuario, dar clic en cambiar, cambiar el nombre y después dar clic en el boton de aceptar
        \nPara eliminar, ingresar un id correspondiente a un usuario y dar clic en eliminar" />

    <TextView
        android:id="@+id/xtvI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sid" />

    <EditText
        android:id="@+id/xetI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <TextView
        android:id="@+id/xtvN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/snom" />

    <EditText
        android:id="@+id/xetN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <Button
        android:id="@+id/xbnA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ins" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/xbnC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cambios" />

        <Button
            android:id="@+id/xbtnA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="Aceptar" />
    </RelativeLayout>


    <Button
        android:id="@+id/xbnD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/baja" />

    <Button
        android:id="@+id/xbnL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cons" />

    <TextView
        android:id="@+id/xtvL"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="" />
</LinearLayout>